--- a/dhan-suvidha/src/Components/HeaderComponent.css
+++ b/dhan-suvidha/src/Components/HeaderComponent.css
@@ -3,3 +3,14 @@
   margin: 0;
   height: 3em;
 }
+.panel > .panel-heading {
+  padding: 16px;
+  background-image: none;
+  background-color: rgb(248, 201, 45);
+  color: black;
+  border-color: black;
+  font-size: x-large;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
