--- a/dhan-suvidha/src/Components/BodyComponent.css
+++ b/dhan-suvidha/src/Components/BodyComponent.css
@@ -7,8 +7,6 @@
     
   }
   .left {
-    left: 0;
-    width: 70vw;
     background:url("../images/background.png");
     background-size: cover;
     position: absolute;
@@ -35,8 +33,8 @@
     font-size: large;
     justify-content: space-between;
   }
-  .card:hover {
-    box-shadow: 0 10px 16px 0 rgba(136, 145, 226, 0.2);
+  .box:hover {
+    box-shadow: 15px 10px 16px 0 rgba(136, 145, 226, 0.2);
   }
   
   .container {
@@ -44,7 +42,20 @@
     padding-right: 50px;
     justify-content: space-between;
   }
-  .spacing{
-    display: flex;
-    justify-content: space-between;
+ 
+  .box{
+    box-shadow: 15px 10px 8px 0 rgba(17, 14, 187, 0.2);
+    transition: 0.3s;
+    width: 30vw;
+    background-color:rgba(255, 255, 255, .4); opacity:0.7;
+    cursor: pointer;
+    text-align: center;
+    padding: 14px 28px;
+    font-size: 16px;
+    font-weight: bold;
+    color: black;opacity: unset;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    font-weight: bold;
   }
