--- a/dhan-suvidha/src/Components/HeaderComponent.css
+++ b/dhan-suvidha/src/Components/HeaderComponent.css
@@ -6,11 +6,19 @@
 .panel > .panel-heading {
   padding: 16px;
   background-image: none;
-  background-color:rgb(148, 166, 226);
+  background-color: rgb(148, 166, 226);
   color: black;
   border-color: black;
   font-size: x-large;
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                                                                                                                                                                    
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.text {
+  transition-duration: 0.2s;
+  font-size: 1.1em;
+  color: rgb(82, 82, 82);
+}
+.text:hover {
+  text-shadow: 2px 2px 7px rgb(139, 172, 149);
 }
