--- a/dhan-suvidha/src/Components/FooterComponent.css
+++ b/dhan-suvidha/src/Components/FooterComponent.css
@@ -39,3 +39,11 @@ h5 {
 .footLink {
   padding-bottom: 1em;
 }
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 20em;
+  width: 15em;
+  margin-top: 0.3em;
+  border: 0.2em solid white;
+}
