--- a/dhan-suvidha/src/Components/BodyComponent.css
+++ b/dhan-suvidha/src/Components/BodyComponent.css
@@ -78,3 +78,15 @@
   color: whitesmoke;
   text-decoration: none;
 }
+.Boxheader{
+
+  font-size: 2.5vw;
+  font-style: italic;
+  font-weight: bold;
+  padding-top: 5%;
+  text-align: center;
+  background: -webkit-linear-gradient( rgb(11, 99, 158),
+  rgb(124, 197, 124));
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+} 
