--- a/dhan-suvidha/src/pages/AboutUs.css
+++ b/dhan-suvidha/src/pages/AboutUs.css
@@ -5,8 +5,8 @@
   padding-top: 1%;
   padding-left: 0.5em;
   padding-bottom: 0.5em;
-  text-align: center;
-  background: -webkit-linear-gradient( rgb(11, 99, 158), rgb(124, 197, 124));
+  text-align: justify;
+  background: -webkit-linear-gradient( rgb(13, 53, 77), rgb(31, 6, 70));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -16,15 +16,15 @@
   display:inline-flex;
   transition: 0.3s;
   border-radius: 20px 70px;
-  width: 60vw;
-  background-color: rgba(255, 255, 255, .4);
+  background-image: linear-gradient(to right, rgb(11, 99, 158),
+  rgb(125, 190, 125));
   opacity: 0.7;
-  text-align: center;
   padding: 40px 30px;
-  font-size: 17px;
-  color:rgb(15, 5, 12);
+  font-size: 18px;
   opacity: 1.5;
+  color:rgb(248, 238, 245);
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
+  line-height: 1.5em;
   
 }
