--- a/dhan-suvidha/src/pages/ourService.css
+++ b/dhan-suvidha/src/pages/ourService.css
@@ -6,7 +6,7 @@
   padding-left: 0.5em;
   padding-bottom: 0.5em;
   text-align: justify;
-  background: -webkit-linear-gradient(rgb(13, 53, 77), rgb(39, 207, 103));
+  background: -webkit-linear-gradient(rgb(6, 8, 88), rgb(39, 207, 103));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -19,7 +19,7 @@
   background-image: linear-gradient(
     to right,
     rgb(11, 99, 158),
-    rgb(125, 190, 125)
+    rgb(6, 21, 53)
   );
   opacity: 0.7;
   padding: 40px 30px;
@@ -34,14 +34,23 @@
   color: greenyellow;
 }
 .anchorServRight {
-  color: rgb(28, 28, 187);
+  color: white;
+}
+.anchorServRight:hover{
+  color: rgb(78, 241, 57);
 }
 .serviceImageBox {
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 2em;
 }
 .serviceImage {
-  width: 20vw;
+  width: 30vw;
+}
+.credImage{
+  min-width:100%  ;
+  height:300px;
+  object-fit:cover;
 }
