--- a/dhan-suvidha/src/pages/AboutUs.css
+++ b/dhan-suvidha/src/pages/AboutUs.css
@@ -2,9 +2,8 @@
   font-size: 3vw;
   font-style: italic;
   font-weight: bold;
-  text-align: center;
+  text-align: justify;
   padding-bottom: 0.5em;
-  padding-left: 15em;
   background: -webkit-linear-gradient( rgb(24, 99, 145), rgb(31, 6, 70));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -13,7 +12,6 @@
 .boxAbt {
   box-shadow: 15px 10px 8px 0 rgba(17, 14, 187, 0.2);
   display:inline-flex;
-  width: 70vw;
   transition: 0.3s;
   border-radius: 20px 70px;
   background-image: linear-gradient(to right, rgb(11, 99, 158),
@@ -33,3 +31,8 @@
   height: 300px;
   padding-bottom: 1em;
 } 
+.adviceImg{
+  min-width: 100%;
+  height: 100%;
+  border-radius: 70px 20px ;
+}
